# dwm-hs-status

./: .gitignore  Main.hs  README.md  Status.cabal  Status.hs  dwm-hs-status.cabal  status.hs
Status/: Audio.hs  Battery.hs  Time.hs  Util.hs  Widget.hs  Wireless.hs
Status/Type/: Action.hs  StatusElement.hs
Status/Widget/: Audio.hs  Battery.hs  CPU.hs  Time.hs  Wireless.hs
