Name:            dwm-hs-status
Version:         0.1
Author:          Chris Lindholm
Cabal-Version:   >= 1.2
Build-Type:      Simple

Library
  Build-Depends:
    base >= 3 && < 5,
    old-locale,
    time,
    process,
    stm,
    parsec
  Exposed-Modules:
    Status,
    Status.Widget
  GHC-Options:   -O2
